--- a/Navi/Navi HTML.html
+++ b/Navi/Navi HTML.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -12,11 +12,16 @@
 	</style>
 </head>
 <body>
+	<iframe src="5-seconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+	<audio autoplay loop>
+		<source src="Great Fairys Fountain.mp3" type="audio/mpeg">
+		Your browser does not support the audio element.
+	  </audio>
 
-
-<div id="contentBox"> 
-
-<button value="a" class="buttonOff" id="theButton"> A </button>
+<div> 
+	<button value="a" class="buttonOff" id="theButton"> A </button>
+	<button id="theButton2"> A </button>
+	<div id="contentBox"></div>
 </div>
 
 
